--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-3">
-          <h1>Leave a comment</h1>
+          <h1 class="display-3">Sprinkle here.</h1>
           <form>
             <div class="form-group">
               <input type="text" id="username" placeholder="Username" class="form-control">
@@ -27,12 +27,20 @@
               <textarea name="name" id="comment" rows="8" placeholder="Comment" class="form-control"></textarea>
             </div>
             <div class="form-group">
-              <button type="button" onclick="commentArea()" class="btn btn-primary btn-md">Post!</button>
+              <button type="button" onclick="commentSection()" class="btn btn-primary btn-md">Post!</button>
             </div>
           </form>
+
+          <!-- Comment Section -->
+          <div class="display-4 text-center">Salt</div>
+          <ul id="commentList" class="comment-group">
+
+          </ul>
+
         </div>
       </div>
     </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
